--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-datepicker": "^4.19.1",
     "framer-motion": "^10.16.4",
     "next": "13.5.5",
     "react": "^18",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18"
   },
   "devDependencies": {
